@@ -2,6 +2,11 @@
 
 Changes with Apache 2.3.9
 
+  *) mod_disk_cache: Change on-disk header file format to support the
+     link of the device/inode of the data file to the matching header
+     file, and to support the option of not writing a data file when
+     the data file is empty. [Graham Leggett]
+
   *) core/mod_unique_id: Add generate_log_id hook to allow to use
      the ID generated by mod_unique_id as error log ID for requests.
 
